--- a/generated-app/package.json
+++ b/generated-app/package.json
@@ -16,16 +16,18 @@
     "test:api": "jest --testPathPattern=api"
   },
   "dependencies": {
-    "next": "15.3.3",
+    "@stripe/stripe-js": "^7.3.1",
+    "next": "^15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "stripe": "^18.2.1",
     "zod": "^3.25.64"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^29.5.14",
-    "@types/node": "^20",
+    "@types/node": "^20.19.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/supertest": "^6.0.3",
